frontend/test/should_fail/index_exec_edge_countFromIndexSame_return_value_mismatch.grg
#using "index_exec_model.gm"

sequence s(i:short)
{
	{ i=countEdgesFromIndexSame(bari, 42) }
}
